frontend/src/_styles/theme.scss
/* ... */
.home-page-content {
  height: calc(100vh - 64px) !important;
  overflow-y: scroll;
  background: var(--slate2);
}

.application-folders-list {
  height: 64px;
}

// DASHBOARD STYLES END

// TABLE
.table-left-sidebar {
  height: calc(100vh - 104px) !important; // 62px [navbar] +  40px [ add table and search ] + extra 2 px(border)
  overflow-y: auto;
}

.toojet-db-table-footer {
  height: 52px;
  background: var(--base) !important;
}

.home-app-card-header {
  margin-bottom: 32px;
}

.homepage-app-card {
  height: 166px;
  outline: 1px solid var(--slate3);
  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
  border-radius: 6px;
  padding: 16px;
  background-color: var(--base) !important;

  .appcard-buttons-wrap {
    display: none;
  }

  .home-app-card-header {
    .menu-ico {
      display: none !important;
    }
  }

  &:hover {
    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);

    .home-app-card-header {
      margin-bottom: 12px;

      .menu-ico {
        display: block !important;
      }
    }

    .app-creation-time-container {
      margin-bottom: 0px;
    }

    .app-card-name {
      margin-bottom: 0px;
    }

    .app-creation-time {
      display: none;
    }


    .appcard-buttons-wrap {
      display: flex;
      padding: 0px;
      gap: 12px;
      width: 240px;
      height: 28px;
      flex-direction: row;

    }

    .app-icon-main {
      width: 36px;
      height: 36px;

    }
  }
}

.app-creation-time-container {
  height: 16px;
}

.release-buttons {
  height: 45px;
  margin-bottom: 10px;
}

.global-settings-app-wrapper {
  max-width: 300px;
}

.version-manager-container {
  padding: 0.6rem;
}

// tooljet db fields styles [ query manager ]
.tj-db-field-wrapper {
  .code-hinter-wrapper {
    ::-webkit-scrollbar {
      display: none;
    }
  }

  .CodeMirror-sizer {
    min-height: 32px !important;
    width: 100%;
    border-right-width: 0px !important;
    padding: 0 !important;
    overflow-y: auto;

    .CodeMirror-lines {
      margin-top: 0px !important;
      min-height: 32px !important;
      padding: 0 !important;
    }
  }
}

.table-list-items#popover-contained {
  .popover-body {
    outline: 1px solid var(--slate3);
    background: var(--base);
    overflow: hidden;
  }

}

.table-list-item-popover.dark {
  svg {
    path {
      fill: white;
    }
  }
}

.theme-dark {
  .react-loading-skeleton {
    background-color: #2F3C4C !important;
    background-image: linear-gradient(90deg, #2F3C4C, #2F3C4C, #2F3C4C) !important;
  }
}

.datasources-category {
  color: var(--slate10);
}

.react-tooltip {
  font-size: .765625rem !important;
}

.add-new-workspace-icon-wrap {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px;
  width: 34px;
  height: 34px;
  background: var(--indigo3);
  border-radius: 6px;
}

.add-new-workspace-icon-old-wrap {
  display: none;
}

.add-workspace-button {
  padding: 8px 12px;
  gap: 11px;
  height: 50px;

  &:hover {
    background: var(--indigo3);
    margin: 0 auto;
    border-radius: 6px;
    padding-bottom: 10px;

    .add-new-workspace-icon-old-wrap {
      padding: 8px;
      width: 34px;
      height: 34px;
      background: var(--indigo9);
      border-radius: 6px;
      display: flex;
      justify-content: center;
      align-items: center;

    }

    .add-new-workspace-icon-wrap {
      display: none;

    }
  }

}

.tj-folder-list {
  display: flex;
  align-items: center;
  color: var(—-slate12) !important;
}

.app-card-name {
  color: var(—-slate12);
  margin-bottom: 2px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.dashboard-breadcrumb-header {
  display: flex;
  align-items: center;
}

.tj-version {
  margin-right: 44px;
  display: flex;
  align-items: center;
  color: var(--slate9);

}

.folder-list {
  color: var(—-slate9) !important;
}

.tj-folder-header {
  margin-bottom: 12px;
  height: 37px;
  cursor: pointer;
}

.tj-dashboard-header-title-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--slate11);

  a {
    text-decoration: none;
  }
}

.dashboard-breadcrumb-header-name {
  font-weight: 500 !important;
  color: var(—-slate12) !important;
}

.tj-dashboard-header-wrap {
  padding-top: 22px;
  padding-bottom: 22px;
  padding-left: 40px;
  height: 64px;
  border-bottom: 1px solid var(--slate5);
}

.dashboard-breadcrumb-header-name:hover {
  text-decoration: none !important;
}


.tj-avatar {
  border-radius: 6px;
  width: 36px;
  height: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--slate3);
  color: var(--slate11);
  text-transform: uppercase;
  font-weight: 500;

  &:hover {
    background: var(--slate4);
  }

  &:focus {
    box-shadow: 0px 0px 0px 4px var(--indigo6);
    background: var(--slate4);
    outline: 0;
  }


  &:active {
    background: var(--orange1);
    box-shadow: none;
  }
}

.tj-current-org {
  span {
    color: var(--slate12);

  }
}


.sidebar-inner {
  align-items: center;
}

.workspace-user-archive-btn {
  visibility: hidden;
}

.workspace-drawer-wrap {
  background: var(--base);
}

.theme-dark {
  .drawer-wrap {
    background: var(--base);
  }
}
/* ... */

